Edits and debugs, support Gemma 2B

--- a/notebooks/wmdp_rmu_lat.ipynb
+++ b/notebooks/wmdp_rmu_lat.ipynb
@@ -57,10 +57,10 @@
     "        dataset[\"train\"].to_json(f'wmdp_data/{name}.jsonl', batch_size=128)\n",
     "\n",
     "\"\"\"TODO: Replace with bio loading code here from local file\"\"\"\n",
-    "# save_path = f\"wmdp_data/bio-forget-corpus.jsonl\"\n",
-    "# if not os.path.exists(save_path):\n",
-    "#     dataset = load_dataset(\"CindyXWu/wmdp-private\", token=hf_api_key)\n",
-    "#     dataset[\"train\"].to_json(save_path, batch_size=128)"
+    "save_path = f\"wmdp_data/bio-forget-corpus.jsonl\"\n",
+    "if not os.path.exists(save_path):\n",
+    "    dataset = load_dataset(\"CindyXWu/wmdp-private\", token=hf_api_key)\n",
+    "    dataset[\"train\"].to_json(save_path, batch_size=128)"
    ]
   },
   {
@@ -122,8 +122,8 @@
    "outputs": [],
    "source": [
     "def initialize_models(config):\n",
-    "    updated_model, tokenizer = load_model(hf_api_key)\n",
-    "    frozen_model, _ = load_model(hf_api_key)\n",
+    "    updated_model, tokenizer = load_model(hf_api_key, config.model_name)\n",
+    "    frozen_model, _ = load_model(hf_api_key, config.model_name)\n",
     "    updated_model = updated_model.train()\n",
     "    return updated_model, tokenizer, frozen_model\n",
     "\n",
@@ -319,6 +319,7 @@
     "forget_data_list, retain_data_list = get_data(\n",
     "    args.forget_corpora,\n",
     "    args.retain_corpora,\n",
+    "    \"wmdp_data\",\n",
     "    args.min_len,\n",
     "    args.max_len,\n",
     "    args.batch_size,\n",
@@ -330,6 +331,13 @@
     "    config,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
